# libwizard

./: .env_example  .gitignore  README.md  main.py  prompt.txt  pyproject.toml
libwizard/: ai.py  data.py
