[project]
name = "libwizard"
version = "0.1.0"
description = "LLM based app to organize downloaded books"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.2",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.14",
    "loguru>=0.7.3",
    "pydantic>=2.11.3",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "toolz>=1.0.0",
    "typer>=0.15.2",
]

[tool.ruff]
line-length = 150
